[package]
name = "vko_tracer"
version = "0.1.0"
authors = ["ianmanor"]

[dependencies]
vulkano="0.9.0"
vulkano-shader-derive = "0.9.0"
image = "0.19.0"
clap = "~2.31.2"
winit = "0.15.0"
vulkano-win = "0.9.0"

[badges]
travis-ci = { repository = "imvm/vko_tracer", branch = "master" }
codecov = { repository = "imvm/vko_tracer", branch = "master", service = "github" }
